# online-store

./: README.md  docker-compose.yml
docs/er-diagram/: er-diagram.md
src/: Dockerfile  alembic.ini  main.py  pyproject.toml
src/api/: router.py
src/api/v1/: category.py  user.py
src/core/: config.py  constants.py  enums.py  exceptions.py
src/db/: session.py
src/db/filters/: category.py  user.py
src/db/migrations/: env.py
src/db/migrations/versions/: 2024-11-19_update_constraint_product_amount.py  2024-11-20_add_online_store_modelsq.py  2024-11-26_create_online_store_models.py
src/db/models/: __init__.py  address.py  base.py  category.py  mixins.py  order.py  order_detail.py  order_product.py  product.py  user.py
src/db/repositories/: category.py  user.py
src/schemas/: address.py  base.py  category.py  user.py
src/services/: category.py  user.py
